--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" ng-app="home"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" ng-app="home"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" ng-app="home"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" ng-app="home"> <!--<![endif]-->
 <head>
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
+
+    <link rel="dns-prefetch" href="//themes.googleusercontent.com">
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="dns-prefetch" href="//ajax.googleapis.com">
+
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ian Lai</title>
 	<meta name="description" content="">
@@ -37,33 +42,26 @@
 <body>
 <!-- Primary Page Layout
 ================================================== -->
-<header class="head">
+<header class="head fix-nav">
 	<h1 class="head__title"><a href="#">Ian Lai</a></h1>
 	<div class="head__cover">
 		<nav class="head__navigation">
-			<a href="#">About</a> 
+			<a href="#about">About</a> 
 			<a href="#">Blog</a> 
-			<a href="#">Projects</a> 
+			<a href="#projects">Projects</a> 
 		</nav>
 	</div>
 </header>
 
 <div class="container content">
-	<div class="fourteen columns offset-by-one">
-		<ul class="posts">
-			<li class="row">
-				<h1 class="post__title"><a href="#">Hello World!</a></h1>
-				<h4 class="post__date">yesterday</h4>
-			</li>
-			<li class="row">
-				<h1 class="post__title"><a href="#">Building a new home</a></h1>
-				<h4 class="post__date">2 days ago</h4>
-			</li>
-		</ul>
-	</div>
+	<div class="sixteen columns" ng-view></div>
 </div>
 
 <!-- End Document
 ================================================== -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+<script src="assets/js/plugins.js"></script>
+<script src="assets/js/application.js"></script>
 </body>
 </html>
