Added 404 for test

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta name="description" content="">
     <meta name="author" content="Ian Lai (MrSaints)">
 
+    <meta name="fragment" content="!">
+
     <!-- Mobile Specific Metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
