--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,8 +1,14 @@
 <ul class="posts">
-    <li class="row" ng-repeat="post in posts">
-        <h2 class="post__title">
-            <a href="#{{post.time | date: 'yyyy'}}/{{post.slug}}/">{{post.title}}</a>
-        </h2>
-        <h4 class="post__date">{{post.time | timeago}}</h4>
+    <li class="row post-item" ng-repeat="post in posts | orderBy:'time':true | limitTo: 10">
+        <div class="twelve columns alpha">
+            <h2 class="post__title">
+                <a href="{{post.time | date: 'yyyy'}}/{{post.slug}}/">{{post.title}}</a>
+            </h2>
+        </div>
+        <div class="four columns omega">
+            <h4 class="post__date content--date" title="{{post.time | date: 'fullDate'}}">
+                {{post.time | timeago}}
+            </h4>
+        </div>
     </li>
 </ul>
