Added 404 template and pagination

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title ng-controller="TitleCtrl" ng-bind-html="title.getTitle()">Ian Lai</title>
     <meta name="description" content="">
-    <meta name="author" content="Ian Lai (MrSaints)">
+    <meta name="author" content="Ian Lai">
 
     <meta name="fragment" content="!">
     <base href="/fyianlai.com/">
